Fixed bug to now hide nav menu on small screens

--- a/QuoteSocialNetwork.WEB/src/app/components/navbar/navbar.component.scss
+++ b/QuoteSocialNetwork.WEB/src/app/components/navbar/navbar.component.scss
@@ -27,6 +27,10 @@
   }
 }
 
+:host /deep/ #nav-mobile {
+  display: block !important;
+}
+
 :host #{'/deep/'} {
   a {
     i.caret {
